--- a/style.css
+++ b/style.css
@@ -88,3 +88,11 @@ iframe {
 a.toggle {
 	font-weight: bold;
 }
+
+div.tweet-container {
+	float: right;
+	margin: 5px;
+	height: 50px;
+	line-height: 50px;
+	vertical-align: middle;
+}
