--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ a:hover {
 a.action {
 	position: relative;
 	display: block;
-	background: url(../img/actions.png) 0 -26px no-repeat;
+	background: url(../assets/images/actions.png) 0 -26px no-repeat;
 	padding: 0 8px;
 	border: 1px solid #26445F;
 	font-size: .9em;
@@ -127,7 +127,7 @@ ul a:hover {
 header {
 	position: relative;
 	height: 36px;
-	background: url(../img/top-bg.png);
+	background: url(../assets/images/top-bg.png);
 	padding: 8px 10px 0;
 }
 
@@ -144,7 +144,7 @@ header a.action:after {
 	right: 0;
 	width: 21px;
 	height: 26px;
-	background: url(../img/actions.png) right -26px;
+	background: url(../assets/images/actions.png) right -26px;
 }
 
 header a.action:active:after {
@@ -156,7 +156,7 @@ header a.action:active:after {
 	width: 177px;
 	height: 25px;
 	margin-top: 2px;
-	background: url(../img/logo.png);
+	background: url(../assets/images/logo.png);
 	text-indent: -999em;
 }
 
@@ -207,7 +207,7 @@ header a.action:active:after {
 	top: 1px;
 	right: 5px;
 	width: 77px;
-	background: url(../img/actions.png) 0 -52px;
+	background: url(../assets/images/actions.png) 0 -52px;
 	line-height: 28px;
 	text-align: center;
 	font-size: .9em;
